--- a/sd_geng/bin/AndroidManifest.xml
+++ b/sd_geng/bin/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
-
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
@@ -81,7 +80,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.START_SREVER" />
             </intent-filter>
-        </service>s
+        </service>
     </application>
 
 </manifest>
